<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_lay"
    android:layout_width="match_parent"

    android:layout_height="fill_parent"
    android:gravity="center"
    >

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/btn_background"

        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/size40"
            android:paddingRight="@dimen/size40"
            android:paddingTop="@dimen/size10"
            android:paddingBottom="@dimen/size10"

            android:background="@color/app_color"

            android:orientation="vertical">
            <TextView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:background="@color/app_color"
                style="@style/TextRegular"
                android:padding="@dimen/size10"
                android:textSize="@dimen/size15"
                android:gravity="center"
                android:text="@string/camera"/>
            <TextView
                android:id="@+id/gallery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:background="@color/app_color"
                android:padding="@dimen/size10"
                android:textSize="@dimen/size15"
                style="@style/TextRegular"
                android:gravity="center"
                android:text="@string/gallery"/>
            <TextView
                android:id="@+id/addtext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:background="@color/app_color"
                android:padding="@dimen/size10"
                android:textSize="@dimen/size15"
                style="@style/TextRegular"
                android:gravity="center"
                android:text="@string/add_text"/>
            <!--<TextView-->
                <!--android:id="@+id/cancel_action"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/color_white"-->
                <!--android:background="@color/app_color"-->
                <!--android:padding="@dimen/size10"-->
                <!--android:textSize="@dimen/size15"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/cancel"/>-->
</LinearLayout>

        <ImageView
            android:id="@+id/cancel_btn"
            android:layout_width="@dimen/size30"
            android:layout_height="@dimen/size30"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:visibility="gone"
            android:src="@drawable/close_icon"/>
    </RelativeLayout>

</RelativeLayout>