<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#B3000000"
        android:layout_margin="@dimen/size6"
        >
        <TextView
            android:id="@+id/add_text_cancel_tv"
            android:layout_width="@dimen/size65"
            android:padding="@dimen/size4"
            android:gravity="center"
            android:textSize="15sp"            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            style="@style/TextBold"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/size10"
            android:background="@drawable/ripple_effect_rect"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/add_text_done_tv"
            android:layout_width="@dimen/size65"
            android:padding="@dimen/size4"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            style="@style/TextBold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/size10"
            android:text="@string/done"
            android:textAllCaps="false"
            android:background="@drawable/ripple_effect_rect"

            android:textColor="@color/white"
           />
        <LinearLayout
            android:id="@+id/seek_bar_layout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/add_text_done_tv"
            android:layout_margin="@dimen/size10"

            android:layout_height="wrap_content"
            android:weightSum="5">
            <TextView
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextRegular"

                android:layout_margin="@dimen/size2"
                android:layout_gravity="center"
                android:textColor="@color/color_white"
                android:text="@string/top_text"/>
            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="@dimen/size0"
                android:layout_weight="3.5"

                android:layout_margin="@dimen/size5"
                android:layout_height="wrap_content"
                android:padding="@dimen/size6"

                android:layout_toLeftOf="@+id/top_padding"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/top_padding"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/size0"
                android:layout_weight="0.5"
                style="@style/TextRegular"

                android:gravity="center"
                android:layout_margin="@dimen/size5"
                android:layout_alignParentTop="true"
                android:padding="@dimen/size6"
                android:textColor="@color/color_white"

                android:text="0"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/seek_bar_layout2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/size10"

            android:layout_height="wrap_content"
            android:layout_below="@+id/seek_bar_layout"
            android:weightSum="5">
            <TextView
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextRegular"

                android:layout_margin="@dimen/size2"
                android:layout_gravity="center"
                android:textColor="@color/color_white"
                android:text="@string/bottom"/>
            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="@dimen/size0"
                android:layout_weight="3.5"

                android:layout_margin="@dimen/size5"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="@dimen/size6"

                android:layout_toLeftOf="@+id/top_padding"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/bottom_padding"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/size0"
                android:layout_weight="0.5"
                android:gravity="center"
                style="@style/TextRegular"

                android:padding="@dimen/size6"
                android:layout_margin="@dimen/size5"
                android:layout_alignParentTop="true"
                android:textColor="@color/color_white"

                android:text="0"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>


























